# xkcd-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
src/: lib.rs  main.rs
tests/: cli.rs
