[package]
name = "xkcd-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
colored = "2.0.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.163", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.11"
# assert_fs = "1.0.13"
insta = { version = "1.29.0", features = ["yaml"] }
predicates = "3.0.3"
